<resources>
    <string name="app_name">ScaneaLO</string>

    <string name="tvUsuario">USUARIO:</string>
    <string name="tvClave">CONTRASEÑA:</string>
    <string name="btVerificar">INGRESAR</string>

    <string name="tvCodigo">CODIGO:</string>
    <string name="tvNombre">NOMBRE:</string>
    <string name="tvBarras">BARRAS:</string>
    <string name="tvPrecio">PRECIO:</string>
    <string name="host">http://192.168.1.13:8080/scanealo</string>

</resources>
