<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Escanear">

        <Button
            android:id="@+id/btnScanner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:text="ESCANEAR" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProducto1"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logoapp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"></Space>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView151"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_weight="1"
                android:paddingRight="25dp"
                android:text="@string/tvBarras"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etBarras1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="CodBarras / QR"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btConsultar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:onClick="getData"
                android:text="Consulta"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btImagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selectImage"
                android:text="Foto" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Actualizar" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"></Space>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView131"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="25dp"
                android:text="@string/tvNombre"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv1Nombre1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Nompre Producto"
                android:textSize="18sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"></Space>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/tvPrecio"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvPrecio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Valor"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"></Space>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="25dp"
                android:layout_marginStart="12dp"
                android:text="@string/tvCodigo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv1Codigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Codigo"
                android:textSize="18sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"></Space>

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="STOCK"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
