<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EscanearUsu">


    <ImageView
        android:id="@+id/imgProducto1"
        android:layout_width="149dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="27dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logoapp"
        app:layout_constraintBottom_toTopOf="@+id/btnScanner1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnScanner1"
        android:layout_width="161dp"
        android:layout_height="0dp"
        android:text="ESCANEAR"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProducto1" />

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScanner1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="52dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space2">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="128dp"
            android:layout_height="34dp"
            android:text="PRECIO:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPrecio1"
            android:layout_width="129dp"
            android:layout_height="36dp"
            android:text="TextView"
            android:textSize="18sp" />

    </LinearLayout>

    <Space
        android:id="@+id/space2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/space2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btConsultar1">

        <TextView
            android:id="@+id/textView131"
            android:layout_width="128dp"
            android:layout_height="38dp"
            android:text="@string/tvNombre"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv1Nombre1"
            android:layout_width="279dp"
            android:layout_height="39dp"
            android:text="TextView"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btConsultar1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space">

        <TextView
            android:id="@+id/textView151"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvBarras"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="270dp" />

        <EditText
            android:id="@+id/etBarras1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="CodBarras / QR"
            android:inputType="textPersonName" />

    </LinearLayout>

    <Button
        android:id="@+id/btConsultar1"
        android:layout_width="123dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:onClick="getData"
        android:text="Consultar"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>